[gd_scene load_steps=9 format=3 uid="uid://c8da1qwyt3452"]

[ext_resource type="Script" uid="uid://d5snj5mspr6c" path="res://scenes/state_machine/player/states/player_state_decrease_energy.gd" id="1_e1ie1"]
[ext_resource type="AudioStream" uid="uid://cs6o1wfn4arxk" path="res://resources/sounds/SFX/player/energy_decrease.wav" id="2_e1ie1"]
[ext_resource type="Texture2D" uid="uid://0fgf3t3c1paq" path="res://resources/sprites/effects/particles/particle_smoke.png" id="3_udskf"]

[sub_resource type="Curve" id="Curve_63twv"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -2.6730251, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_mohyj"]
curve = SubResource("Curve_63twv")

[sub_resource type="Curve" id="Curve_62cun"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -2.3712704, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_63twv"]
curve = SubResource("Curve_62cun")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ubnx8"]
resource_local_to_scene = true
particle_flag_disable_z = true
spread = 180.0
radial_velocity_min = 39.999977
radial_velocity_max = 59.999977
gravity = Vector3(0, -50, 0)
radial_accel_min = -2.2351742e-06
radial_accel_max = -2.2351742e-06
scale_min = 0.19999999
scale_max = 0.29999998
scale_curve = SubResource("CurveTexture_63twv")
alpha_curve = SubResource("CurveTexture_mohyj")

[node name="PlayerStateDecreaseEnergy" type="Node2D"]
script = ExtResource("1_e1ie1")

[node name="DecreaseEnergyAudio" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_e1ie1")
volume_db = -5.0
bus = &"SFX"

[node name="EnergyDecreaseParticle" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
emitting = false
texture = ExtResource("3_udskf")
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_ubnx8")
